main-service/backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
